--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
- <html lang="en">
-   <head> 
+<html lang="en">
+  <head> 
     <meta charset="UTF-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="theme-color" content="#1DB954" /> 
-     <meta name="description" content="Spotify 2.0 Clone using React and Spotify API" /> 
-     <title>Spotify 2.0 Clone</title>
-      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
-    </head> 
-    <body>
-       <noscript>You need to enable JavaScript to run this app.</noscript> 
-       <div id="root"></div>
-       </body>
-        </html>
+    <meta name="theme-color" content="#1DB954" /> 
+    <meta name="description" content="Spotify 2.0 Clone using React and Spotify API" /> 
+    <title>Spotify 2.0 Clone</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- ✅ Add Material Icons (for home, search, etc.) -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript> 
+    <div id="root"></div>
+  </body>
+</html>
